@@ -18,7 +18,7 @@ sudo pipx upgrade borgmatic
 
 Omit `sudo` if you installed borgmatic as a non-root user. And if you
 installed borgmatic *both* as root and as a non-root user, you'll need to
-upgrade each installation indepedently.
+upgrade each installation independently.
 
 If you originally installed borgmatic with `sudo pip3 install --user`, you can
 uninstall it first with `sudo pip3 uninstall borgmatic` and then [install it
